--- a/package.json
+++ b/package.json
@@ -10,11 +10,19 @@
     "server": "npm run watch --prefix server",
     "client": "npm start --prefix client",
     "watch": "npm run server & npm run client",
-    "deploy": "npm run build --prefix client-gatsby && npm start --prefix server",
+    "deploy": "npm run build --prefix client && npm start --prefix server",
     "deploy-cluster": "npm run build --prefix client && npm run cluster --prefix server",
     "test": "npm test --prefix server && npm test --prefix client"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "gatsby": "^4.22.0",
+    "gatsby-plugin-manifest": "^4.22.0",
+    "gatsby-plugin-react-helmet": "^5.22.0",
+    "gatsby-source-filesystem": "^4.22.0",
+    "gatsby-transformer-sharp": "^4.22.0",
+    "react-helmet": "^6.1.0"
+  }
 }
